--- a/ddp-workspace/projects/ddp-atcp/src/auth0/auth0-styles/main.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/auth0/auth0-styles/main.scss
@@ -12,11 +12,13 @@ b {
   font-weight: 700
 }
 
-.form-group.error .FormItem-label {
+.form-group.error .FormItem-label,
+.form-group.email-taken .FormItem-label {
   color: #DB2C2C !important;
 }
 
-.form-group.error input {
+.form-group.error input,
+.form-group.email-taken input {
   border: 1px solid #DB2C2C !important;
   border-left: 3px solid #DB2C2C !important;
 }
