--- a/ddp-workspace/projects/ddp-testboston/src/app/components/user-registration-prequal/user-registration-prequal.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/user-registration-prequal/user-registration-prequal.component.scss
@@ -73,6 +73,10 @@
         line-height: 1.5rem;
     }
 
+    &_input_additional {
+        margin-top: 0.6rem;
+    }
+
     .Link {
         color: mat-color($app-theme, 2700) !important;
     }
