at | dar form updates

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/data-access/data-access.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/data-access/data-access.html
@@ -374,7 +374,7 @@
       type="submit"
       class="ButtonBordered ButtonBordered--green"
       (click)="submit(form)"
-      [disabled]="form.invalid && form.submitted"
+      [disabled]="(form.invalid && form.submitted) || busy"
       *ngIf="activeTab === countTabs - 1"
       translate
     >
