--- a/ddp-workspace/projects/ddp-esc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-esc/src/styles.scss
@@ -1412,6 +1412,16 @@ ul {
     animation: spin 2s linear infinite;
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .Sidenav li {
     text-align: start;
     padding: 0 !important;
