--- a/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
@@ -12,6 +12,16 @@
         </div>
         <ul class="nav Header-menu">
             <div class="collapse navbar-collapse Display--inline" id="rare-genomes-nav" [collapse]="isCollapsed">
+                <li data-target=".navbar-collapse.in" data-toggle="collapse">
+                    <ddp-language-selector></ddp-language-selector>
+                </li>
+                <li data-target=".navbar-collapse.in" data-toggle="collapse">
+                    <ddp-popup-with-checkbox text="Toolkit.Dialogs.LanguagePreferences.Text"
+                                             checkboxText="Toolkit.Dialogs.LanguagePreferences.CheckboxText"
+                                             buttonText="Toolkit.Dialogs.LanguagePreferences.ButtonText">
+                    </ddp-popup-with-checkbox>
+                </li>
+
                 <li dropdown class="dropdown Hidden-mobile">
                     <a dropdownToggle class="Header-menuItem" translate>Header.Families.Text<span
                             class="caret"></span></a>
