--- a/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="row Header" [ngClass]="{'Header--home': inHome || inLGMD || inEligiblityCrit, 'stick': isPageScrolled}">
     <nav class="navbar" role="navigation">
         <div class="navbar-header Display--inline">
-            <a class="navbar-brand" routerLink="/" class="Header-logo" [attr.alt]="'Common.LogoAlt' | translate"></a>
+            <a class="navbar-brand Header-logo" routerLink="/" [attr.alt]="'Common.LogoAlt' | translate"></a>
             <button type="button" class="navbar-toggle" (click)="isCollapsed = !isCollapsed"
                 [attr.aria-expanded]="!isCollapsed" aria-controls="rare-genomes-nav">
                 <span class="sr-only">Toggle navigation</span>
@@ -12,16 +12,6 @@
         </div>
         <ul class="nav Header-menu">
             <div class="collapse navbar-collapse Display--inline" id="rare-genomes-nav" [collapse]="isCollapsed">
-                <li data-target=".navbar-collapse.in" data-toggle="collapse">
-                    <ddp-language-selector></ddp-language-selector>
-                </li>
-                <li data-target=".navbar-collapse.in" data-toggle="collapse">
-                    <ddp-popup-with-checkbox text="Toolkit.Dialogs.LanguagePreferences.Text"
-                                             checkboxText="Toolkit.Dialogs.LanguagePreferences.CheckboxText"
-                                             buttonText="Toolkit.Dialogs.LanguagePreferences.ButtonText">
-                    </ddp-popup-with-checkbox>
-                </li>
-
                 <li dropdown class="dropdown Hidden-mobile">
                     <a dropdownToggle class="Header-menuItem" translate>Header.Families.Text<span
                             class="caret"></span></a>
