--- a/ddp-workspace/projects/ddp-rgp/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles.scss
@@ -4,7 +4,7 @@ body {
     padding: 0;
     height: 100%;
     font-size: 15px !important;
-    padding-right: 0px !important;
+    padding-right: 0 !important;
 }
 
 body {
@@ -270,7 +270,7 @@ h4.Subtitle {
 p.Subheading {
     font-size: 1rem;
     font-weight: 500 !important;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 p.Paragraph {
@@ -615,7 +615,7 @@ td .mat-input-wrapper {
 .InlineError {
     width: 100%;
     display: inline-block;
-    padding: 4px 0px;
+    padding: 4px 0;
     font-family: 'Roboto', sans-serif !important;
     font-size: 0.75rem;
     font-weight: 400;
@@ -1592,7 +1592,7 @@ h2.Landing-title {
     }
 }
 
-@media (min-width: 0px) and (max-width: 767px) {
+@media (min-width: 0) and (max-width: 767px) {
     .RowSameHeight-xs {
         display: -webkit-box;
         display: -webkit-flex;
@@ -1715,7 +1715,7 @@ toolkit-session-will-expire {
         font-size: 1rem !important;
         padding: 8px 20px !important;
         border: none;
-        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     }
 
     .ButtonFilled--neutral {
@@ -1814,4 +1814,29 @@ toolkit-session-will-expire {
             }
         }
     }
+}
+
+// Language selector styles
+.SimpleButton .ddp-globe {
+    stroke: #0C457D;
+    fill: transparent;
+    vertical-align: middle;
+    transition: stroke 0.3s ease;
+}
+.SimpleButton:hover .ddp-globe {
+    stroke: #0EA6B5;
+    fill: transparent;
+    vertical-align: middle;
+    transition: stroke 0.3s ease;
+}
+
+mat-icon.ddp-dropdown-arrow {
+    width: 1px;
+    height: 1px;
+    border-top: 4px dashed;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    vertical-align: middle;
+    margin-left: 2px;
+    overflow: hidden;
 }
