Remove redundant "px"

--- a/ddp-workspace/projects/ddp-esc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-esc/src/styles.scss
@@ -1708,7 +1708,7 @@ select:-webkit-autofill {
 
  .ddp-agreement-text {
      white-space: normal;
-     margin: 0px;
+     margin: 0;
      font-size: 1rem;
      font-weight: 300;
      color: mat-color($app-theme, 800);
