Align styles for "about-you"
  to be similar with the old version

--- a/ddp-workspace/projects/ddp-esc/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-esc/src/app-theme.scss
@@ -20,6 +20,7 @@ $md-primary: (
     1600: #FADFC4,
     1700: #333,
     1800: #F2F2F2,
+    1900: #E0E0E0,
     2000: #FFD3D3,
     2100: #6b5757,
     2200: #376996,
@@ -45,7 +46,7 @@ $md-primary: (
         2000: #000000,
         2100: #000000,
         2200: #000000
-    )    
+    )
 );
 
 $app-theme: mat-palette($md-primary);
