--- a/ddp-workspace/projects/ddp-esc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-esc/src/styles.scss
@@ -406,9 +406,6 @@ a {
     }
 }
 
-//************************
-
-
 //   Page header
 .MainContainer {
     position: relative;
@@ -777,9 +774,6 @@ a {
     }
 }
 
-//****************************
-
-
 // Page
 .PageContent {
     padding: 50px 0 150px 0;
@@ -949,8 +943,6 @@ ul {
 .Button--rect:hover {
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15) !important;
 }
-
-//***********************
 
 // welcome
 .Intro {
@@ -1517,7 +1509,7 @@ ul {
 
 .PageContent-subtitle {
     color: mat-color($app-theme, 1000);
-    font-weight: 400;
+    font-weight: 400 !important;
     font-size: 1.2rem;
     line-height: 1.8rem;
     margin: 2rem 0 1rem 0;
@@ -1697,148 +1689,147 @@ ddp-activity-dropdown-picklist-question {
     }
 }
 
- .ddp-list {
-     margin: 20px;
-     padding: 0;
- }
+.ddp-list {
+    margin: 20px;
+    padding: 0;
+}
 
- .ddp-list li {
-     font-size: 1.1rem;
-     font-weight: 300;
-     margin: 35px 0 20px 0;
-     color: mat-color($app-theme, 1700);
-     padding: 0 0 0 25px;
- }
+.ddp-list li {
+    font-size: 1.1rem;
+    font-weight: 300;
+    margin: 35px 0 20px 0;
+    color: mat-color($app-theme, 1700);
+    padding: 0 0 0 25px;
+}
 
- .ddp-list-inside {
-     margin: 0;
-     padding: 0;
-     list-style-position: inside;
- }
+.ddp-list-inside {
+    margin: 0;
+    padding: 0;
+    list-style-position: inside;
+}
 
- .ddp-list-inside li {
-     padding: 0;
-     font-size: 1.2rem;
-     font-weight: 400;
- }
+.ddp-list-inside li {
+    padding: 0;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
 
- .ddp-agreement-text {
-     white-space: normal;
-     margin: 0;
-     font-size: 1rem;
-     font-weight: 300;
-     color: mat-color($app-theme, 800);
- }
+.ddp-agreement-text {
+    white-space: normal;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 300;
+    color: mat-color($app-theme, 800);
+}
 
- .ddp-question {
-     margin: 35px 0 20px 0;
-     font-weight: 300;
-     font-size: 1.1rem;
-     line-height: 1.6rem;
-     color: mat-color($app-theme, 1700) !important;
-     padding: 0;
+.ddp-question {
+    margin: 35px 0 20px 0;
+    font-weight: 300;
+    font-size: 1.1rem;
+    line-height: 1.6rem;
+    color: mat-color($app-theme, 1700) !important;
+    padding: 0;
 
-     .ddp-required-question-prompt {
-         color: mat-color($app-theme, 800);
-         font-size: 1.1rem;
-     }
+    .ddp-required-question-prompt {
+        color: mat-color($app-theme, 800);
+        font-size: 1.1rem;
+    }
 
-     li {
-         color: mat-color($app-theme, 800);
-     }
- }
+    li {
+        color: mat-color($app-theme, 800);
+    }
+}
 
- .ddp-question-neutral {
-     color: mat-color($app-theme, 800) !important;
- }
+.ddp-question-neutral {
+    color: mat-color($app-theme, 800) !important;
+}
 
- .ddp-required-question-prompt {
-     font-weight: 300;
-     color: mat-color($app-theme, 1700) !important;
- }
+.ddp-required-question-prompt {
+    font-weight: 300;
+    color: mat-color($app-theme, 1700) !important;
+}
 
- .ddp-list {
-     p {
-         font-size: 1.1rem;
-         color: mat-color($app-theme, 1700);
+.ddp-list {
+    p {
+        font-size: 1.1rem;
+        color: mat-color($app-theme, 1700);
 
-         &.ddp-question-prompt {
-             font-weight: 400;
-         }
-     }
- }
+        &.ddp-question-prompt {
+            font-weight: 400;
+        }
+    }
+}
 
- .ddp-dropdown {
-     padding: 10px;
-     margin: 0 0 5px 0;
-     border: 1px solid mat-color($app-theme, 1800);
-     border-radius: 2px;
- }
+.ddp-dropdown {
+    padding: 10px;
+    margin: 0 0 5px 0;
+    border: 1px solid mat-color($app-theme, 1800);
+    border-radius: 2px;
+}
 
- .ddp-block-body {
-     margin: 20px 0 0 0;
-     color: mat-color($app-theme, 800);
+.ddp-block-body {
+    margin: 20px 0 0 0;
+    color: mat-color($app-theme, 800);
 
-     .PageContent-text {
-         margin: 14px 0 0 0;
-         color: mat-color($app-theme, 800);
-     }
- }
+    .PageContent-text {
+        margin: 14px 0 0 0;
+    }
+}
 
- .ddp-block-title-bold {
-     color: mat-color($app-theme, 1000);
-     font-weight: 400;
-     font-size: 1.2rem;
-     line-height: 1.8rem;
-     margin: 2rem 0 1rem 0;
- }
+.ddp-block-title-bold {
+    color: mat-color($app-theme, 1000);
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    margin: 2rem 0 1rem 0;
+}
 
- .ddp-single-question {
-     margin: 35px 20px 20px 45px;
- }
+.ddp-single-question {
+    margin: 35px 20px 20px 45px;
+}
 
 .PageContent-contact {
     list-style-type: disc;
     margin: 10px 0 0 0;
 }
 
- .ddp-block-title-color {
-     font-size: 1.2rem;
-     line-height: 1.8rem;
-     font-weight: 300;
-     margin: 2rem 0 1rem 0;
-     color: mat-color($app-theme, 800);
- }
+.ddp-block-title-color {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    font-weight: 300;
+    margin: 2rem 0 1rem 0;
+    color: mat-color($app-theme, 800);
+}
 
- .ddp-li-gray {
-     color: mat-color($app-theme, 800) !important;
- }
+.ddp-li-bullet {
+    color: mat-color($app-theme, 1000) !important;
+}
 
- .ddp-date-field-margin {
-     margin: 0 15px 0 0;
- }
+.ddp-date-field-margin {
+    margin: 0 15px 0 0;
+}
 
- .ddp-content {
-     width: 100%;
- }
+.ddp-content {
+    width: 100%;
+}
 
- .ddp-agreement {
-     margin: 0 0 0 -25px;
- }
+.ddp-agreement {
+    margin: 0 0 0 -25px;
+}
 
- .ddp-group-block {
-     margin: 0;
- }
+.ddp-group-block {
+    margin: 0;
+}
 
- .ddp-group-block-list {
-     padding: 0 !important;
- }
+.ddp-group-block-list {
+    padding: 0 !important;
+}
 
- .ddp-textarea-block {
-     .mat-form-field-infix {
-         border-top: 0 solid transparent !important;
-     }
- }
+.ddp-textarea-block {
+    .mat-form-field-infix {
+        border-top: 0 solid transparent !important;
+    }
+}
 
 .mat-form-field-infix {
     > select {
@@ -1846,26 +1837,26 @@ ddp-activity-dropdown-picklist-question {
     }
 }
 
- .ddp-group-margin {
-     margin: 20px;
- }
+.ddp-group-margin {
+    margin: 20px;
+}
 
- .ddp-textarea {
-     height: 1.5rem !important;
- }
+.ddp-textarea {
+    height: 1.5rem !important;
+}
 
- .ddp-composite-text {
-     flex-grow: 1;
-     margin-right: 30px;
- }
+.ddp-composite-text {
+    flex-grow: 1;
+    margin-right: 30px;
+}
 
- .ddp-close-button {
-     margin-left: auto;
-     cursor: pointer;
-     color: mat-color($app-theme, 300);
-     font-size: 1rem;
-     font-weight: 900;
- }
+.ddp-close-button {
+    margin-left: auto;
+    cursor: pointer;
+    color: mat-color($app-theme, 300);
+    font-size: 1rem;
+    font-weight: 900;
+}
 
 .ddp-user-menu-button {
     outline: none;
@@ -1886,275 +1877,282 @@ ddp-activity-dropdown-picklist-question {
     }
 }
 
- .ddp-institutions-form,
- .ddp-activity-question {
-     display: inline-block;
-     vertical-align: top;
-     width: 100%;
- }
+.ddp-institutions-form,
+.ddp-activity-question {
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+}
 
- .ddp-hide-block {
-     margin: 0 !important;
-     padding: 0 !important;
-     height: 0;
- }
+.ddp-address-embedded,
+.ddp-institutions-form {
+    &__title, &__subtitle {
+        font-weight: 400;
+    }
+}
 
- .ddp-hide-subtitle {
-     opacity: 0;
-     transition: all 0.3s ease;
- }
+.ddp-hide-block {
+    margin: 0 !important;
+    padding: 0 !important;
+    height: 0;
+}
 
- .ddp-menu-text {
-     padding: 0 16px !important;
- }
+.ddp-hide-subtitle {
+    opacity: 0;
+    transition: all 0.3s ease;
+}
 
- .ddp-dashboard {
-     .dashboard-mobile-label {
-         color: rgba(0, 0, 0, 0.54);
-     }
- }
+.ddp-menu-text {
+    padding: 0 16px !important;
+}
 
- .dashboard-activity-button {
-     font-size: 0.9rem;
-     font-family: inherit;
-     font-weight: 400;
-     background: none;
-     border: none;
-     padding: 0;
-     cursor: pointer;
-     text-decoration: none;
-     text-align: left;
- }
+.ddp-dashboard {
+    .dashboard-mobile-label {
+        color: rgba(0, 0, 0, 0.54);
+    }
+}
 
- .ddp-picklist-option-list-item {
-     height: auto !important;
-     margin-bottom: 10px;
- }
+.dashboard-activity-button {
+    font-size: 0.9rem;
+    font-family: inherit;
+    font-weight: 400;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: left;
+}
 
- .ddp-picklist-group-title {
-     font-size: 1.25rem;
-     font-weight: 500;
- }
+.ddp-picklist-option-list-item {
+    height: auto !important;
+    margin-bottom: 10px;
+}
 
- .example-radio-group {
-     display: flex;
-     flex-direction: row;
- }
+.ddp-picklist-group-title {
+    font-size: 1.25rem;
+    font-weight: 500;
+}
 
- .ddp-login-button {
-     @extend .mat-button;
- }
+.example-radio-group {
+    display: flex;
+    flex-direction: row;
+}
 
- .subhead:after {
-     content: "";
-     display: table;
-     clear: both;
- }
+.ddp-login-button {
+    @extend .mat-button;
+}
 
- /**
-     Define the prompt to be displayed after a required question
-  */
- .ddp-required-question-prompt:after {
-     content: ' *';
- }
+.subhead:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
- @media only screen and (max-width: 1100px) {
-     .ddp-picklist-group-container {
-         grid-template-columns: repeat(2, 50%) !important;
-     }
- }
+/**
+    Define the prompt to be displayed after a required question
+*/
+.ddp-required-question-prompt:after {
+    content: ' *';
+}
 
- @media only screen and (max-width: 600px) {
-     .ddp-picklist-group-container {
-         grid-template-columns: repeat(1, 100%) !important;
-     }
- }
+@media only screen and (max-width: 1100px) {
+    .ddp-picklist-group-container {
+        grid-template-columns: repeat(2, 50%) !important;
+    }
+}
 
- .mat-snack-bar-container {
-     box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
-     margin: 4px;
-     background-color: mat-color($app-theme, 100);
-     padding: 0 !important;
- }
+@media only screen and (max-width: 600px) {
+    .ddp-picklist-group-container {
+        grid-template-columns: repeat(1, 100%) !important;
+    }
+}
 
- .mat-checkbox-label {
-     color: mat-color($app-theme, 1700);
-     font-weight: 300;
- }
+.mat-snack-bar-container {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
+    margin: 4px;
+    background-color: mat-color($app-theme, 100);
+    padding: 0 !important;
+}
 
- .mat-select-placeholder {
-     color: mat-color($app-theme, 1700);
- }
+.mat-checkbox-label {
+    color: mat-color($app-theme, 1700);
+    font-weight: 300;
+}
 
- .mat-radio-label {
-     font-weight: 300;
- }
+.mat-select-placeholder {
+    color: mat-color($app-theme, 1700);
+}
 
- .mat-checkbox-layout {
-     align-items: normal !important;
- }
+.mat-radio-label {
+    font-weight: 300;
+}
 
- .mat-input-flex {
-     font-weight: 300;
- }
+.mat-checkbox-layout {
+    align-items: normal !important;
+}
 
- .mat-dialog-container {
-     background-color: mat-color($app-theme, 1300);
- }
+.mat-input-flex {
+    font-weight: 300;
+}
 
- .mat-form-field-invalid .mat-form-field-label {
-     color: mat-color($app-theme, 1200);
- }
+.mat-dialog-container {
+    background-color: mat-color($app-theme, 1300);
+}
 
- .mat-error {
-     color: mat-color($app-theme, 1200);
- }
+.mat-form-field-invalid .mat-form-field-label {
+    color: mat-color($app-theme, 1200);
+}
 
- .mat-form-field-invalid .mat-form-field-ripple {
-     background-color: mat-color($app-theme, 1200);
- }
+.mat-error {
+    color: mat-color($app-theme, 1200);
+}
 
- .mat-form-field-label-wrapper {
-     font-weight: 300;
-     font-size: 1rem;
- }
+.mat-form-field-invalid .mat-form-field-ripple {
+    background-color: mat-color($app-theme, 1200);
+}
 
- .mat-input-placeholder {
-     font-weight: 300;
-     font-size: 1rem;
- }
+.mat-form-field-label-wrapper {
+    font-weight: 300;
+    font-size: 1rem;
+}
 
- .mat-error {
-     font-weight: 300;
-     font-size: 0.75rem;
- }
+.mat-input-placeholder {
+    font-weight: 300;
+    font-size: 1rem;
+}
 
- .mat-checkbox-frame {
-     border-color: mat-color($app-theme, 900);
- }
+.mat-error {
+    font-weight: 300;
+    font-size: 0.75rem;
+}
 
- .mat-radio-outer-circle {
-     border-color: mat-color($app-theme, 900);
- }
+.mat-checkbox-frame {
+    border-color: mat-color($app-theme, 900);
+}
 
- .mat-list-item-content {
-     padding: 0 4px !important;
- }
+.mat-radio-outer-circle {
+    border-color: mat-color($app-theme, 900);
+}
 
- .mat-checkbox-layout .mat-checkbox-label {
-     font-size: 1rem;
- }
+.mat-list-item-content {
+    padding: 0 4px !important;
+}
 
- .mat-radio-label-content {
-     font-size: 1rem;
- }
+.mat-checkbox-layout .mat-checkbox-label {
+    font-size: 1rem;
+}
 
- .mat-form-field-infix {
-     font-size: 1rem;
- }
+.mat-radio-label-content {
+    font-size: 1rem;
+}
 
- .mat-list .mat-list-item .mat-list-item-content {
-     display: block !important;
- }
+.mat-form-field-infix {
+    font-size: 1rem;
+}
 
- .mat-input-element {
-     height: 2.0rem !important;
-     font-size: 1rem;
- }
+.mat-list .mat-list-item .mat-list-item-content {
+    display: block !important;
+}
 
- input.mat-input-element {
-     height: 1.2rem !important;
-     font-size: 1rem;
- }
+.mat-input-element {
+    height: 2.0rem !important;
+    font-size: 1rem;
+}
 
- .mat-form-field .mat-form-field-subscript-wrapper {
-     overflow: visible !important;
- }
+input.mat-input-element {
+    height: 1.2rem !important;
+    font-size: 1rem;
+}
 
- .mat-input-element {
-     line-height: 1.1rem;
-     font-size: 1rem;
- }
+.mat-form-field .mat-form-field-subscript-wrapper {
+    overflow: visible !important;
+}
 
- .mat-radio-outer-circle,
- .mat-radio-inner-circle {
-     height: 16px !important;
-     width: 16px !important;
- }
+.mat-input-element {
+    line-height: 1.1rem;
+    font-size: 1rem;
+}
 
- .mat-radio-container {
-     margin-top: 3px !important;
-     height: 16px !important;
-     width: 16px !important;
- }
+.mat-radio-outer-circle,
+.mat-radio-inner-circle {
+    height: 16px !important;
+    width: 16px !important;
+}
 
- .mat-radio-checked .mat-radio-inner-circle {
-     transform: scale(.8) !important;
- }
+.mat-radio-container {
+    margin-top: 3px !important;
+    height: 16px !important;
+    width: 16px !important;
+}
 
- .mat-menu-item {
-     padding: 0 !important;
- }
+.mat-radio-checked .mat-radio-inner-circle {
+    transform: scale(.8) !important;
+}
 
- @media only screen and (min-width: 768px) {
+.mat-menu-item {
+    padding: 0 !important;
+}
 
-     .mat-row:first-child,
-     .mat-header-row:first-child {
-         flex: 0 0 40% !important;
-     }
+@media only screen and (min-width: 768px) {
 
-     .mat-row:last-child,
-     .mat-header-row:last-child {
-         flex: 0 0 15% !important;
-     }
- }
+    .mat-row:first-child,
+    .mat-header-row:first-child {
+        flex: 0 0 40% !important;
+    }
 
- .mat-checkbox-inner-container:hover .mat-checkbox-persistent-ripple {
-     opacity: 0 !important;
- }
+    .mat-row:last-child,
+    .mat-header-row:last-child {
+        flex: 0 0 15% !important;
+    }
+}
 
- .mat-checkbox-inner-container {
-     width: 20px !important;
-     height: 20px !important;
- }
+.mat-checkbox-inner-container:hover .mat-checkbox-persistent-ripple {
+    opacity: 0 !important;
+}
 
- .mat-input-element {
-     font-weight: 100 !important;
- }
+.mat-checkbox-inner-container {
+    width: 20px !important;
+    height: 20px !important;
+}
 
- .mat-select {
-     font-weight: 100 !important;
- }
+.mat-input-element {
+    font-weight: 100 !important;
+}
 
- .ddp-helper {
-     font-size: 0.8rem !important;
-     color: mat-color($app-theme, 800) !important;
- }
+.mat-select {
+    font-weight: 100 !important;
+}
 
- .ddp-counter-color {
-     color: mat-color($app-theme, 600) !important;
- }
+.ddp-helper {
+    font-size: 0.8rem !important;
+    color: mat-color($app-theme, 800) !important;
+}
 
- .ddp-answer-container {
-     display: flex;
-     flex-direction: row;
- }
+.ddp-counter-color {
+    color: mat-color($app-theme, 600) !important;
+}
 
- .mat-option-text {
-     line-height: 16px !important;
-     white-space: normal !important;
- }
+.ddp-answer-container {
+    display: flex;
+    flex-direction: row;
+}
 
- @media only screen and (max-width: 480px) {
-     .mat-option-text {
-         font-size: 14px !important;
-     }
+.mat-option-text {
+    line-height: 16px !important;
+    white-space: normal !important;
+}
 
-     .mat-form-field-placeholder {
-         font-size: 12px !important;
-         white-space: normal !important;
-     }
- }
+@media only screen and (max-width: 480px) {
+    .mat-option-text {
+        font-size: 14px !important;
+    }
+
+    .mat-form-field-placeholder {
+        font-size: 12px !important;
+        white-space: normal !important;
+    }
+}
 
 .mat-drawer-content {
     overflow: hidden !important;
