Replace the class name with more correct one
  because sometimes 'ddp-li-gray' is going to have not gray color

--- a/ddp-workspace/projects/ddp-angio/src/styles.scss
+++ b/ddp-workspace/projects/ddp-angio/src/styles.scss
@@ -1848,7 +1848,7 @@ select:-webkit-autofill {
     color: mat-color($app-theme, 1000);
 }
 
-.ddp-li-gray {
+.ddp-li-bullet {
     color: mat-color($app-theme, 1000) !important;
 }
 
