--- a/ddp-workspace/projects/ddp-mbc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mbc/src/styles.scss
@@ -1921,7 +1921,7 @@ select:-webkit-autofill {
     color: mat-color($app-theme, 800);
 }
 
-.ddp-li-gray {
+.ddp-li-bullet {
     color: mat-color($app-theme, 800) !important;
 }
 
