--- a/ddp-workspace/projects/ddp-mpc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mpc/src/styles.scss
@@ -1744,7 +1744,7 @@ select:-webkit-autofill {
     color: mat-color($app-theme, 800);
 }
 
-.ddp-li-gray {
+.ddp-li-bullet {
     color: mat-color($app-theme, 800) !important;
 }
 
