--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -2311,7 +2311,7 @@ p.Input-label {
     color: mat-color($app-theme, 800);
 }
 
-.ddp-li-gray {
+.ddp-li-bullet {
     color: mat-color($app-theme, 800) !important;
 }
 
