--- a/ddp-workspace/projects/ddp-mbc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mbc/src/styles.scss
@@ -7,7 +7,7 @@ body {
     padding: 0;
     height: 100%;
     font-size: 16px;
-    padding-right: 0px !important;
+    padding-right: 0 !important;
     background-color: mat-color($app-theme, 200);
 }
 
@@ -218,7 +218,7 @@ a:focus {
 }
 
 .Header-nav {
-    margin: 0px 50px 0 0;
+    margin: 0 50px 0 0;
 }
 
 .Header-nav--small {
@@ -227,7 +227,7 @@ a:focus {
 
 .Header-navList {
     display: flex;
-    margin: 0px;
+    margin: 0;
 }
 
 .Header-navList--small {
@@ -1031,7 +1031,7 @@ ul {
 
 .ButtonFilled--neutral {
     background-color: mat-color($app-theme, 300) !important;
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 .ButtonFilled--neutral--margin {
@@ -1839,7 +1839,7 @@ select:-webkit-autofill {
 
 .ddp-agreement-text {
     white-space: normal;
-    margin: 0px;
+    margin: 0;
     font-size: 1rem;
     font-weight: 300;
     color: mat-color($app-theme, 800);
@@ -2059,7 +2059,7 @@ select:-webkit-autofill {
     box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
     margin: 4px;
     background-color: mat-color($app-theme, 100);
-    padding: 0px 0px 0px 0px !important;
+    padding: 0 !important;
 }
 
 .mat-checkbox-label {
@@ -2123,7 +2123,7 @@ select:-webkit-autofill {
 }
 
 .mat-list-item-content {
-    padding: 0px 4px !important;
+    padding: 0 4px !important;
 }
 
 .mat-checkbox-layout .mat-checkbox-label {
