fix minor styling issues

--- a/ddp-workspace/projects/ddp-esc/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-esc/src/app-theme.scss
@@ -24,6 +24,7 @@ $md-primary: (
     2000: #FFD3D3,
     2100: #6b5757,
     2200: #376996,
+    2300: #cbe2f0,
     contrast: (
         50: #000000,
         100: #000000,
@@ -45,7 +46,8 @@ $md-primary: (
         1800: #000000,
         2000: #000000,
         2100: #000000,
-        2200: #000000
+        2200: #000000,
+        2300: #000000
     )
 );
 
