DDP 5542: DDP-ESC styling (first part) (#414)
* Fix missed semicolon

* Refactor styles using Sass ampersand

* Remove redundant 'px' measure

* Undo commented style lines

* Remove redundant "px"

* Align styles for "about-you"

  to be similar with the old version

* Add missed translations

* Align styles for "release" activity

* Fix colors for CONSENT

* fix minor styling issues

Co-authored-by: Pavel Sidorenko <fat.cat.1703@gmail.com>

--- a/ddp-workspace/projects/ddp-esc/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-esc/src/app-theme.scss
@@ -20,9 +20,11 @@ $md-primary: (
     1600: #FADFC4,
     1700: #333,
     1800: #F2F2F2,
+    1900: #E0E0E0,
     2000: #FFD3D3,
     2100: #6b5757,
     2200: #376996,
+    2300: #cbe2f0,
     contrast: (
         50: #000000,
         100: #000000,
@@ -44,8 +46,9 @@ $md-primary: (
         1800: #000000,
         2000: #000000,
         2100: #000000,
-        2200: #000000
-    )    
+        2200: #000000,
+        2300: #000000
+    )
 );
 
 $app-theme: mat-palette($md-primary);
