--- a/ddp-workspace/projects/ddp-atcp/src/app/components/statistics/statistics.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/statistics/statistics.scss
@@ -13,34 +13,28 @@
 }
 
 .statistics-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 50px;
+  row-gap: 3rem;
 
   margin: 5rem 0;
   padding: 0;
 
   list-style: none;
 
+  @media only screen and (max-width: 1024px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   @media only screen and (max-width: 576px) {
+    grid-template-columns: 1fr;
+
     margin: 2rem 0;
   }
 
   &__item {
-    width: calc(100% / 4);
-
-    margin-bottom: 3rem;
-    padding-right: 50px;
-
-    @media only screen and (max-width: 1024px) {
-      width: calc(100% / 2);
-    }
-
     @media only screen and (max-width: 576px) {
-      width: 100%;
-
-      margin-bottom: 0;
-      padding-right: 0;
-
       text-align: center;
     }
   }
