at | test Auth0 scripts & styles deployment

--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/_variables.scss
@@ -4,7 +4,8 @@ $dark-green: #5C7A36;
 $panache-green: #eaf6ea;
 $fern-green: #5cb85c;
 $bright-blue: #33b2cc;
-$blue: #4274BC;
+// $blue: #4274BC;
+$blue: #face8d;
 $blue-light: #559BE0;
 $blue-dark: #346391;
 $astral-blue: #337ab7;
