--- a/ddp-workspace/projects/ddp-osteo/src/app/components/gallery/gallery.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <div class="gallery" (swipeleft)="moveForward()" (swiperight)="moveBack()">
     <!-- Note that all images should have the same ratio (4:3 for osteo) -->
-    <img class="gallery__image" [src]="selectedItem.image" alt="selectedItem.alt">
+    <img lazy-resource class="gallery__image" [src]="selectedItem.image" alt="selectedItem.alt">
     <div class="gallery__text">
         <h4 class="no-margin">{{selectedItem.title}}</h4>
         <p>{{selectedItem.text}}</p>
