--- a/ddp-workspace/projects/ddp-rgp/src/app/app.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="MainContainer">
+  <app-page-banner></app-page-banner>
   <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
